@@ -1,3 +1,9 @@
+2003-07-23  Michal Ludvig  <mludvig@suse.cz>
+	    Elena Zannoni  <ezannoni@redhat.com>
+
+ 	* linespec.c (decode_line_2): Avoid crash if 
+ 	find_function_start_sal() returns empty record.
+
 2003-07-23  Andreas Schwab  <schwab@suse.de>
 
 	* ia64-tdep.c (ia64_print_insn): New function.
